--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>G3 Architects</title>
+    <title>Architects-G3</title>
 </head>
 <body>
     <header>
@@ -45,7 +45,7 @@
                         <button class="btn-primary">explore more</button>
                     </div>
                     <div class="banner-img">
-                        <img src="../images/banner.png" alt="">
+                        <img src="./images/banner.png" alt="">
                     </div>
                 </div>
             </div>
@@ -58,10 +58,10 @@
         <div class="container">
             <div class="team">
                 <div class="team-img">
-                    <img src="../images/team1.png" alt="">
-                    <img src="../images/team2.png" alt="">
-                    <img src="../images/team3.png" alt="">
-                    <img src="../images/team4.png" alt="">
+                    <img src="./images/team1.png" alt="">
+                    <img src="./images/team2.png" alt="">
+                    <img src="./images/team3.png" alt="">
+                    <img src="./images/team4.png" alt="">
                 </div>
 
                 <div class="team-features">
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="features-img">
-                    <img src="../images/architect.png" alt="">
+                    <img src="./images/architect.png" alt="">
                     <div class="experience">
                         <h2>10+ Year</h2>
                         <p>Experience</p>
@@ -145,28 +145,28 @@
             <div class="facts">
                 <div class="fact">
                     <div class="fact-icon">
-                        <img src="../images/icons/ribon.png" alt="">
+                        <img src="./images/icons/ribon.png" alt="">
                     </div>
                     <h2>54</h2>
                     <p>Awards Winnings</p>
                 </div>
                 <div class="fact">
                     <div class="fact-icon">
-                        <img src="../images/icons/projects.png" alt="">
+                        <img src="./images/icons/projects.png" alt="">
                     </div>
                     <h2>1458</h2>
                     <p>Project Finished</p>
                 </div>
                 <div class="fact">
                     <div class="fact-icon">
-                        <img src="../images/icons/customers.png" alt="">
+                        <img src="./images/icons/customers.png" alt="">
                     </div>
                     <h2>590</h2>
                     <p>Clients Worked</p>
                 </div>
                 <div class="fact">
                     <div class="fact-icon">
-                        <img src="../images/icons/email.png" alt="">
+                        <img src="./images/icons/email.png" alt="">
                     </div>
                     <h2>22578</h2>
                     <p>Email Send</p>
@@ -192,19 +192,19 @@
             <!--  -->
             <div class="sponsors">
                 <div class="sponsor-logo">
-                    <img src="../images/sponsors/spotify.png" alt="">
+                    <img src="./images/sponsors/spotify.png" alt="">
                 </div>
                 <div class="sponsor-logo">
-                    <img src="../images/sponsors/amazon.png" alt="">
+                    <img src="./images/sponsors/amazon.png" alt="">
                 </div>
                 <div class="sponsor-logo">
-                    <img src="../images/sponsors/google.png" alt="">
+                    <img src="./images/sponsors/google.png" alt="">
                 </div>
                 <div class="sponsor-logo">
-                    <img src="../images/sponsors/telerama.png" alt="">
+                    <img src="./images/sponsors/telerama.png" alt="">
                 </div>
                 <div class="sponsor-logo">
-                    <img src="../images/sponsors/figma.png" alt="">
+                    <img src="./images/sponsors/figma.png" alt="">
                 </div>
             </div>
         </div>
@@ -221,7 +221,5 @@
             </div>
         </section>
     </footer>
-
-
 </body>
 </html>
